logs/dag_id=create_postgres_table/run_id=manual__2023-04-08T18:04:16.513972+00:00/task_id=create_table/attempt=1.log
[2023-04-08T18:04:17.581+0000] {taskinstance.py:1165} INFO - Dependencies all met for <TaskInstance: create_postgres_table.create_table manual__2023-04-08T18:04:16.513972+00:00 [queued]>
[2023-04-08T18:04:17.593+0000] {taskinstance.py:1165} INFO - Dependencies all met for <TaskInstance: create_postgres_table.create_table manual__2023-04-08T18:04:16.513972+00:00 [queued]>
[2023-04-08T18:04:17.596+0000] {taskinstance.py:1362} INFO - 
--------------------------------------------------------------------------------
[2023-04-08T18:04:17.599+0000] {taskinstance.py:1363} INFO - Starting attempt 1 of 2
[2023-04-08T18:04:17.602+0000] {taskinstance.py:1364} INFO - 
--------------------------------------------------------------------------------
[2023-04-08T18:04:17.615+0000] {taskinstance.py:1383} INFO - Executing <Task(PostgresOperator): create_table> on 2023-04-08 18:04:16.513972+00:00
[2023-04-08T18:04:17.620+0000] {standard_task_runner.py:55} INFO - Started process 2439 to run task
[2023-04-08T18:04:17.624+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', 'create_postgres_table', 'create_table', 'manual__2023-04-08T18:04:16.513972+00:00', '--job-id', '6', '--raw', '--subdir', 'DAGS_FOLDER/create_table.py', '--cfg-path', '/tmp/tmph2rdtqb5']
[2023-04-08T18:04:17.626+0000] {standard_task_runner.py:83} INFO - Job 6: Subtask create_table
[2023-04-08T18:04:17.683+0000] {task_command.py:376} INFO - Running <TaskInstance: create_postgres_table.create_table manual__2023-04-08T18:04:16.513972+00:00 [running]> on host d92f0c929be4
[2023-04-08T18:04:17.744+0000] {taskinstance.py:1592} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=create_postgres_table
AIRFLOW_CTX_TASK_ID=create_table
AIRFLOW_CTX_EXECUTION_DATE=2023-04-08T18:04:16.513972+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=manual__2023-04-08T18:04:16.513972+00:00
[2023-04-08T18:04:17.756+0000] {base.py:71} INFO - Using connection ID 'postgres' for task execution.
[2023-04-08T18:04:17.762+0000] {sql.py:315} INFO - Running statement: CREATE TABLE IF NOT EXISTS users (
    id SERIAL PRIMARY KEY,
    firstname VARCHAR NOT NULL,
    lastname VARCHAR NOT NULL,
    country VARCHAR NOT NULL,
    username VARCHAR UNIQUE NOT NULL,
    password VARCHAR NOT NULL,
    email VARCHAR UNIQUE NOT NULL);
    ), parameters: None
[2023-04-08T18:04:17.765+0000] {taskinstance.py:1851} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/postgres/operators/postgres.py", line 94, in execute
    self.hook.run(self.sql, self.autocommit, parameters=self.parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 295, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 320, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near ")"
LINE 9:     )
            ^

[2023-04-08T18:04:17.777+0000] {taskinstance.py:1406} INFO - Marking task as UP_FOR_RETRY. dag_id=create_postgres_table, task_id=create_table, execution_date=20230408T180416, start_date=20230408T180417, end_date=20230408T180417
[2023-04-08T18:04:17.795+0000] {standard_task_runner.py:105} ERROR - Failed to execute job 6 for task create_table (syntax error at or near ")"
LINE 9:     )
            ^
; 2439)
[2023-04-08T18:04:17.837+0000] {local_task_job.py:164} INFO - Task exited with return code 1
[2023-04-08T18:04:17.858+0000] {local_task_job.py:273} INFO - 0 downstream tasks scheduled from follow-on schedule check
